...
            planLevel: .scheduler,
            maxPlanLevel: .editor,
            songLevel: .viewer,
            canViewAllPeople: false,
            ledTeamCount: 2,
            serviceTypes: [
              ServicesAccessGrantedServiceType(id: "1101", name: "Sunday Gathering", level: .editor),
              ServicesAccessGrantedServiceType(id: "1102", name: "Youth Night", level: .scheduler),
              ServicesAccessGrantedServiceType(id: "1103", name: "Special Events", level: .viewer),
            ])),
        people: PeopleAccess(status: .none))
    case .viewer:
      AccessSnapshot(
...
